# managed-research

./: AGENTS.md  ARCHIVE.md  PACKAGE_README.md  README.md  full_migration_scope.txt  lefthook.yml  optimization-arena-issues.txt  pyproject.toml  remigration.txt  update_for_eval.txt
.agents/plugins/: marketplace.json
.agents/plugins/managed-research/: .mcp.json  README.md
docs/: mcp.md  migrations-1.2026.0420.md  noun-surface-contract.md  python-sdk.md  quickstart.md
managed_research/: __init__.py  auth.py  client.py  errors.py  schema_sync.py  version.py
managed_research/_internal/: __init__.py  crypto.py  env.py
managed_research/mcp/: README.md  __init__.py  __main__.py  objective_tools.py  registry.py  request_models.py  server.py
managed_research/mcp/tools/: __init__.py  approvals.py  artifacts.py  datasets.py  exports.py  files.py  github.py  integrations.py  logs.py  models.py  open_research.py  outputs.py  progress.py  projects.py  prs.py  readiness.py  repos.py  resources.py  runs.py  smr_policy_schemas.py  trained_models.py  usage.py  workspace_inputs.py
managed_research/models/: README.md  __init__.py  canonical_usage.py  checkpoints.py  local_execution_profile.py  open_research_visual.py  project.py  project_workspace.py  run_control.py  run_diagnostics.py  run_events.py  run_execution.py  run_observability.py  run_state.py  run_timeline.py  runtime_intent.py  smr_actor_models.py  smr_agent_harnesses.py  smr_agent_kinds.py  smr_agent_models.py  smr_credential_providers.py  smr_environment_kinds.py  smr_funding_sources.py  smr_host_kinds.py  smr_inference_providers.py  smr_providers.py  smr_resource_kinds.py  smr_resource_providers.py  smr_roles.py  smr_run_policy.py  smr_runbooks.py  smr_runtime_kinds.py  smr_tool_providers.py  smr_usage_types.py  smr_work_modes.py  types.py  work_products.py
managed_research/schemas/: public_models.json  smr_openapi.yaml
managed_research/sdk/: README.md  __init__.py  _base.py  approvals.py  artifacts.py  client.py  compat.py  config.py  cost.py  credentials.py  datasets.py  exports.py  files.py  github.py  integrations.py  launch.py  logs.py  models.py  outputs.py  progress.py  project.py  projects.py  prs.py  readiness.py  repos.py  repositories.py  runs.py  setup.py  trained_models.py  transport.py  usage.py  work_products.py  workspace_inputs.py
managed_research/sdk/namespaces/: __init__.py
managed_research/transport/: __init__.py  http.py  pagination.py  streaming.py
old/managed_research/: __init__.py  auth.py  client.py  version.py
old/managed_research/mcp/: registry.py  server.py
old/managed_research/mcp/tools/: artifacts.py  projects.py
old/managed_research/sdk/: client.py  integrations.py  projects.py
old/managed_research/transport/: retries.py  streaming.py
old/tests/contract/: test_schema_sync.py
old/tests/mcp/: test_mcp_integrations.py  test_registry.py
old/tests/models/: test_generated_models.py
old/tests/sdk/: test_client_integrations.py  test_namespaces.py
old/tests/transport/: test_helpers.py  test_http.py
scripts/: sync_public_schemas.py  validate_contract.py
scripts/ci/: smoke_openai_bridge.py
scripts/e2e/: run_openai_agents_sdk_reviewer_e2e.py
tests/contract/: test_public_surface.py  test_smr_reviewer_subtypes.py
tests/mcp/: test_mcp_stdio_transport.py  test_server_tools.py
tests/sdk/: test_client_workspace_and_progress.py  test_data_factory.py  test_namespaces.py  test_openai_bridge.py  test_package_exports.py
tests/transport/: test_helpers.py  test_limit_errors.py
