[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "managed-research"
version = "0.1.0"
description = "Pure-Python SMR API client and MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Synth Laboratories" }]
dependencies = [
    "httpx>=0.28.1",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.11.0",
]

[project.scripts]
managed-research-mcp = "managed_research.mcp.server:main"
managed-research-sync-schemas = "managed_research.schema_sync:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["managed_research", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
