[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "managed-research"
version = "1.2026.050502"
description = "SDK, MCP, and schemas for authenticated Managed Research."
readme = "PACKAGE_README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Synth Laboratories" }]
dependencies = [
    "httpx>=0.28.1",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.3.3",
    "ruff>=0.15.0",
    "ty>=0.0.28",
]

[project.scripts]
managed-research-mcp = "managed_research.mcp.server:main"

[project.urls]
Homepage = "https://github.com/synth-laboratories/managed-research"
Repository = "https://github.com/synth-laboratories/managed-research"
Issues = "https://github.com/synth-laboratories/managed-research/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["managed_research", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["managed_research"]

# ty: strictness is staged; shrink diagnostics over time rather than blocking CI on
# json/Mapping edge cases across the whole SDK surface.
[tool.ty.rules]
invalid-type-form = "ignore"

[tool.ty.analysis]
# Optional bridge dependency; not installed in minimal `managed-research` environments.
allowed-unresolved-imports = ["synth_ai", "synth_ai.**"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.3.3",
    "ruff>=0.15.0",
    "ty>=0.0.28",
]
